# mauikit-archiver

./: CMakeLists.txt  Mainpage.dox  MauiKitArchiverConfig.cmake.in  Messages.sh  README.md  metainfo.yaml
po/ar/: mauikitarchiver.po
po/ca/: mauikitarchiver.po
po/ca@valencia/: mauikitarchiver.po
po/cs/: mauikitarchiver.po
po/de/: mauikitarchiver.po
po/es/: mauikitarchiver.po
po/eu/: mauikitarchiver.po
po/fi/: mauikitarchiver.po
po/fr/: mauikitarchiver.po
po/ga/: mauikitarchiver.po
po/gl/: mauikitarchiver.po
po/he/: mauikitarchiver.po
po/it/: mauikitarchiver.po
po/ka/: mauikitarchiver.po
po/ko/: mauikitarchiver.po
po/lt/: mauikitarchiver.po
po/lv/: mauikitarchiver.po
po/nl/: mauikitarchiver.po
po/nn/: mauikitarchiver.po
po/pl/: mauikitarchiver.po
po/pt_BR/: mauikitarchiver.po
po/sa/: mauikitarchiver.po
po/sk/: mauikitarchiver.po
po/sl/: mauikitarchiver.po
po/sv/: mauikitarchiver.po
po/tr/: mauikitarchiver.po
po/ug/: mauikitarchiver.po
po/uk/: mauikitarchiver.po
po/zh_CN/: mauikitarchiver.po
po/zh_TW/: mauikitarchiver.po
src/: CMakeLists.txt
src/code/: archiver_plugin.cpp  archiver_plugin.h  compressedfile.cpp  compressedfile.h  moduleinfo.cpp  moduleinfo.h
src/controls/: ArchivePage.qml  ExtractDialog.qml  NewArchiveDialog.qml
